Implementamos la biblioteca faster-whisper notando una mejora de rendimiento de entre 3 a 5 veces más rápido en las transcripciones

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>Audio Upload</title>
+    <!-- <meta charset="UTF-8" /> -->
   </head>
   <body>
-    <h1>Upload Audio File</h1>
-    <button onclick="startRecording()">Start Recording</button>
-    <button onclick="stopRecording()">Stop Recording</button>
+    <h1>Habla por tu Micrófono!</h1>
+    <button onclick="startRecording()">Iniciar Grabación</button>
+    <button onclick="stopRecording()">Detener Grabación</button>
     <ul id="messages"></ul>
     <script>
       let ws;
